--- a/ExPlaner.API/appsettings.Development.json
+++ b/ExPlaner.API/appsettings.Development.json
@@ -5,5 +5,12 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ExPlaner;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtSecurityKey": "70775a1b-3cbe-4ebc-bbe8-fe6c8d27b9c5",
+  "JwtIssuer": "https://localhost",
+  "JwtAudience": "https://localhost",
+  "JwtExpiryInHours": 1
 }
